[SCA] SCA-based code improvements.